# Punch-or-Judy-Studios-

./: .gitignore  COMMERCIAL-LICENSE.md  LICENSE.md  NOTICE.md  README.md  START_HERE_WINDOWS.bat  pyproject.toml
docs/: API_KEYS.md  ARCHITECTURE.md  LOCAL_MODELS.md
puppet_forge/: __init__.py  app.py  audio.py  defaults.py  models.py  paths.py  prompting.py  providers.py  renderer.py  storage.py  voice.py
puppet_forge/static/: app.css  app.js  stage.js
puppet_forge/templates/: index.html
scripts/: audition_voice.py  smoke_pipeline.py  start_puppet_forge.ps1
tests/: test_prompting.py  test_storage_provider_renderer.py  test_voice_audio.py
