[project]
name = "punch-or-judy-studios"
version = "0.7.0"
description = "Local-first AI puppet show studio with original characters, local voice, puppet rendering, and optional AI providers."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Puppet Forge" }]
dependencies = []

[project.scripts]
punch-or-judy = "puppet_forge.app:main"
puppet-forge = "puppet_forge.app:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
